--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script>
+            $(document).ready(function() {
+                console.log("{{email}}")
+            })
+
             function logout() {
                 $.ajax({
                     type: "GET",
